src/snapshots/ruff__linter__tests__D107_D.py.snap
---
source: src/linter.rs
expression: checks
---
- kind: PublicInit
  location:
    row: 60
    column: 4
  end_location:
    row: 63
    column: 4
  fix: ~
- kind: PublicInit
  location:
    row: 534
    column: 4
  end_location:
    row: 538
    column: 0
  fix: ~

