src/snapshots/ruff__linter__tests__D201_D.py.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    NoBlankLineBeforeFunction: 1
  location:
    row: 137
    column: 4
  end_location:
    row: 137
    column: 24
  fix:
    patch:
      content: ""
      location:
        row: 136
        column: 0
      end_location:
        row: 137
        column: 0
- kind:
    NoBlankLineBeforeFunction: 1
  location:
    row: 151
    column: 4
  end_location:
    row: 151
    column: 37
  fix:
    patch:
      content: ""
      location:
        row: 150
        column: 0
      end_location:
        row: 151
        column: 0
- kind:
    NoBlankLineBeforeFunction: 1
  location:
    row: 546
    column: 4
  end_location:
    row: 549
    column: 7
  fix:
    patch:
      content: ""
      location:
        row: 545
        column: 0
      end_location:
        row: 546
        column: 0
- kind:
    NoBlankLineBeforeFunction: 1
  location:
    row: 568
    column: 4
  end_location:
    row: 571
    column: 7
  fix:
    patch:
      content: ""
      location:
        row: 567
        column: 0
      end_location:
        row: 568
        column: 0

